<resources>
    <string name="app_name">FitApplitcation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>

    <string name="click_to_login">Click To Login</string>
    <string name="click_to_register">Click To Register</string>
    <string name="logout">logout</string>
    <string name="did_you_forgot_your_password">Did you forgot your password?</string>
    <string name="hello">hello</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile">Mobile\n</string>
    <string name="profile">Check Profile</string>
    <string name="userlist">See Users List</string>
<string name="unit">Cm</string>
<string name="femaletext">Female</string>
<string name="age">Age</string>
<string name="startingheight">170</string>
<string name="startingweight">55</string>
<string name="startingage">22</string>
<string name="todo">TODO</string>
<string name="height">Height</string>
<string name="calculate_your_bmi">Calculate Your BMI</string>
<string name="weight">Weight</string>
<string name="male">Male</string>
    <string name="ShowBMI">Show BMI</string>
    <string name="publications">Show Posts</string>
</resources>